Fix Carousel on Mobile view
Fix carousel settings on mobile view

--- a/src/Orckestra.Composer.Website/UI.Package/Sass/Custom/Search/_product-tile.scss
+++ b/src/Orckestra.Composer.Website/UI.Package/Sass/Custom/Search/_product-tile.scss
@@ -61,6 +61,16 @@
         transition: all 0.3s ease-in-out;
     }
 
+    
+    .variants {
+        .slick-slide & {
+            opacity: 0;
+            max-height: 0;
+            padding-top: 0;
+        }
+    }
+    
+
 
     @include media-breakpoint-up(sm) {
         .product-tile-button-container, 
@@ -171,6 +181,11 @@
         padding-bottom: 104%;
         position: relative;
         z-index: -1;
+        @include media-breakpoint-down(sm) {
+            .slick-slide & {
+                padding-bottom: 128%;
+            }
+        }
    }
 
     .product-tile-recurring {
